package(default_visibility = ["//visibility:public"])

exports_files([
    "0001-make-pt_blkmask-atomic.patch",
    "0002-memchr-sse2.patch",
    "0003-memchr-guard-mmx-builtins.patch",
    "0004-musl-errno-runtime-cases.patch",
    "0005-openmp-disable-mm-malloc.patch",
    "0006-nsync-atomic-pointer-cast.patch",
    "0007-musl-lookup-name-errno-runtime.patch",
    "0008-clang-intrin-wrappers.patch",
    "0009-clang-mmintrin-vector-conversion.patch",
    "0010-disable-mmx-intrinsics.patch",
    "0011-errno-no-nocallersavedregisters.patch",
    "0012-disable-tmmintrin-mmx.patch",
    "0013-tprecode8to16-conditional-neon.patch",
    "0014-guard-max-align.patch",
    "0016-dlmalloc-atomic-loads.patch",
    "0017-immintrin-include-xmmintrin.patch",
    "0018-guard-avx-includes.patch",
    "0019-guard-avx512vlvnni.patch",
    "0020-sigblock-external-sig.patch",
    "0021-musl-getnameinfo-af-constants.patch",
    "0022-mmintrin-internal-respect-cosmo-disable-mmx.patch",
    "0023-chunkcopy-scalar-fallback.patch",
    "0024-sysv-aarch64-local-registers.patch",
    "0025-arm-neon-f16-compare.patch",
    "0026-arm64-clang-compat.patch",
    "0027-arm-neon-compare.patch",
    "0028-arm64-fenv-demangle.patch",
    "0029-brain16-clang-fallback.patch",
    "0030-auto-disable-mmx-when-no-builtins.patch",
    "0031-arm64-build-fixes.patch",
    "0032-demangle-jmpbuf-x86.patch",
    "0033-xmmintrin-sse-without-mmx.patch",
    "0034-guard-avx512-popcnt-builtins.patch",
    "0035-str-guard-arch-intrinsics.patch",
    "0037-pthread-arm64-setjmp-constraints.patch",
    "0045-rdseed-guard-nonx86.patch",
    "0046-mmintrin-forward-decls.patch",
    "0047-mmintrin-cosmo-disable-mmx.patch",
    "0048-intrin-guard-clang.patch",
    "0049-use-clang-intrin-when-mmx-disabled.patch",
    "0050-zlib-intrin-system-includes.patch",
    "0051-ape-aarch64-balign.patch",
])
