load("@rules_cc//cc/toolchains:actions.bzl", "cc_action_type_set")
load("@rules_cc//cc/toolchains:args.bzl", "cc_args")
load("//toolchain:linker_policy.bzl", "linker_arg_group")

package(default_visibility = ["//visibility:public"])

cc_args(
    name = "default_link_flags",
    actions = [
        "@rules_cc//cc/toolchains/actions:link_actions",
    ],
    args = linker_arg_group("linux_default_link_flags").args,
)

cc_args(
    name = "kernel_headers_include_search_paths",
    actions = [
        "@rules_cc//cc/toolchains/actions:source_compile_actions",
    ],
    allowlist_include_directories = [
        "@kernel_headers//:kernel_headers_directory",
    ],
    args = [
        "-isystem",
        "{kernel_headers_include_search_path}",
    ],
    data = [
        "@kernel_headers//:kernel_headers_directory",
    ],
    format = {
        "kernel_headers_include_search_path": "@kernel_headers//:kernel_headers_directory",
    },
)

cc_args(
    name = "glibc_headers_include_search_paths",
    actions = [
        "@rules_cc//cc/toolchains/actions:source_compile_actions",
    ],
    allowlist_include_directories = [
        "//runtimes/glibc:glibc_headers_include_search_directory",
    ],
    args = [
        # "__GLIBC_MINOR__={d}", version.minor
        "-isystem",
        "{libc_headers_include_search_path}",
    ],
    data = [
        "//runtimes/glibc:glibc_headers_include_search_directory",
    ],
    format = {
        "libc_headers_include_search_path": "//runtimes/glibc:glibc_headers_include_search_directory",
    },
)

cc_args(
    name = "sanitizer_headers_include_search_paths",
    actions = [
        "@rules_cc//cc/toolchains/actions:source_compile_actions",
    ],
    allowlist_include_directories = [
        "//sanitizers:sanitizers_headers_include_search_directory",
    ],
    args = [
        "-isystem",
        "{sanitizer_headers_include_search_paths}",
    ],
    data = [
        "//sanitizers:sanitizers_headers_include_search_directory",
    ],
    format = {
        "sanitizer_headers_include_search_paths": "//sanitizers:sanitizers_headers_include_search_directory",
    },
)

cc_args(
    name = "default_libs_gnu",
    actions = [
        "@rules_cc//cc/toolchains/actions:link_actions",
    ],
    args = linker_arg_group("linux_default_libs_gnu").args,
    data = linker_arg_group("linux_default_libs_gnu").data,
    format = linker_arg_group("linux_default_libs_gnu").format,
)

###

cc_args(
    name = "musl_libc_headers_include_search_paths",
    actions = [
        "@rules_cc//cc/toolchains/actions:source_compile_actions",
    ],
    args = [
        "-isystem",
        "{libc_headers_include_search_path}",
    ],
    data = [
        "//runtimes/musl:musl_headers_include_search_directory",
    ],
    format = {
        "libc_headers_include_search_path": "//runtimes/musl:musl_headers_include_search_directory",
    },
)

#TODO: Factorize this and gnu
cc_args(
    name = "default_libs_musl",
    actions = [
        "@rules_cc//cc/toolchains/actions:link_actions",
    ],
    args = linker_arg_group("linux_default_libs_musl").args,
    data = linker_arg_group("linux_default_libs_musl").data,
    format = linker_arg_group("linux_default_libs_musl").format,
)

alias(
    name = "default_libs",
    actual = select({
        "//platforms/config:musl": ":default_libs_musl",
        "//platforms/config:gnu": ":default_libs_gnu",
        "//conditions:default": ":default_libs_gnu",
    }),
)
