load("@rules_cc//cc/toolchains:args.bzl", "cc_args")
load("//toolchain:linker_policy.bzl", "cc_link_spec")

package(default_visibility = ["//visibility:public"])

cc_args(
    name = "mingw_headers_include_search_paths",
    actions = [
        "@rules_cc//cc/toolchains/actions:compile_actions",
    ],
    allowlist_include_directories = [
        "@mingw//:mingw_generated_headers_crt_directory",
        "@mingw//:mingw_w64_headers_include_directory",
        "@mingw//:mingw_w64_headers_crt_directory",
        "@mingw//:mingw_w64_winpthreads_include_directory",
    ],
    args = [
        "-isystem",
        "{mingw_w64_winpthreads_include}",
        "-isystem",
        "{mingw_generated_headers_crt}",
        "-isystem",
        "{mingw_w64_headers_include}",
        "-isystem",
        "{mingw_w64_headers_crt}",
    ],
    data = [
        "@mingw//:mingw_generated_headers_crt_directory",
        "@mingw//:mingw_w64_headers_crt_directory",
        "@mingw//:mingw_w64_headers_include_directory",
        "@mingw//:mingw_w64_winpthreads_include_directory",
    ],
    format = {
        "mingw_generated_headers_crt": "@mingw//:mingw_generated_headers_crt_directory",
        "mingw_w64_headers_include": "@mingw//:mingw_w64_headers_include_directory",
        "mingw_w64_headers_crt": "@mingw//:mingw_w64_headers_crt_directory",
        "mingw_w64_winpthreads_include": "@mingw//:mingw_w64_winpthreads_include_directory",
    },
)

cc_args(
    name = "default_libs",
    actions = [
        "@rules_cc//cc/toolchains/actions:link_actions",
    ],
    args = cc_link_spec("windows_default_libs").args,
    data = cc_link_spec("windows_default_libs").data,
    format = cc_link_spec("windows_default_libs").format,
)
